--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=node-app
 sonar.organization=dmefrain02
 sonar.sources=.
-sonar.login=306f1453b62b61331c5a52058daf34eb89a75721
+sonar.login=${env.SONAR_TOKEN}
