--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,11 @@ jobs:
     - name: Run tests
       run: npm test
     - name: Build Docker image
-      run: docker build -t dmefrain02/node-app:latest .
+      run: docker build -t dmefrain02/node-practica:latest .
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Push Docker image
-      run: docker push dmefrain02/node-app:latest
+      run: docker push dmefrain02/node-practica:latest
